SERVER-100144 CBR asserts on plans with Fetch nested under Fetch (#32449)

GitOrigin-RevId: 9bdc68bba3f2ccd0365fe8bef238a9431ff89cdb